@@ -5,7 +5,8 @@ Changelog
 3.1.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Enable extjs in portal_registry with extjs GS profile.
+  [jone]
 
 
 3.1.4 (2012-03-19)
